src/test/resources/amyc/parser/failing/FunDefError2.amy
object FunDef
  fn foo(i: Int(32)) = { 42 }
end FunDef
